--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -1,5 +1,5 @@
 .website-title{
-    color: #F34E3A;
+    color: #DC2626;
 }
 .menu-icon{
     width: 30px;
@@ -12,7 +12,7 @@
     height: 70px;
     width: 90%;
     margin: 0 auto;
-    padding: 30px 0;
+    padding: 12px 0;
 }
 .header-menu{
     text-align: right;
@@ -20,7 +20,7 @@
 .header-menu a{
     color: white;
     margin: 5px 15px;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 600;
     display: inline-block;
 }
@@ -28,15 +28,14 @@
     color: white;
     border: none;
     border-radius: 25px;
-    font-size: 18px;
+    font-size: 17px;
     font-weight: 600;
     background-color: #F34E3A;
-    padding: 4px 20px 6px;
+    padding: 4px 18px 6px;
     margin-left: 5px;
-    margin-top: 10px;
 }
 .login-button:hover{
-    background-color: #fc2c15;
+    background-color: #DC2626;
 }
 
 @media only screen and (min-width: 688px) {
