--- a/src/Components/Footer/Footer.css
+++ b/src/Components/Footer/Footer.css
@@ -2,9 +2,10 @@
     padding: 20px 0;
     display: flex;
     justify-content: center;
+    background-color: rgb(2, 0, 38);
 }
 .footer-container a{
-    color: white;
+    color: rgb(217, 213, 213);
     display: inline-block;
     font-weight: 600;
 }
@@ -16,4 +17,16 @@
     border-radius: 5px;
     padding: 3px 8px;
     margin-left: 7px;
+}
+@media only screen and (min-width: 688px) {
+    .child-footer-container{
+        display: grid;
+        grid-template-columns: repeat(2, 1fr);
+    }
+}
+@media only screen and (min-width: 992px){
+    .child-footer-container{
+        display: grid;
+        grid-template-columns: repeat(3, 1fr);
+    }
 }
