--- a/src/Components/Service/Service.css
+++ b/src/Components/Service/Service.css
@@ -4,6 +4,11 @@
     padding: 5px;
     border-radius: 5px;
 }
+.service-container:hover{
+    transform: scale(1.1);
+    transition: .4s ease-in-out;
+    
+}
 .service-container img{
     width: 100%;
     border-radius: 5px;
@@ -14,6 +19,7 @@
         width: 250px;
         height: 540px;
         position: relative;
+        margin: 50px auto;
     }
     .purchase-btn{
         position: absolute;
